# duckiepond_gazebo

./: README.md  dependencies.sh  environment.sh
catkin_ws/src/duckiepond_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/duckiepond_gazebo/include/: usv_gazebo_thrust_plugin.hh
catkin_ws/src/duckiepond_gazebo/launch/: duckiepond.launch  duckiepond_empty.launch  duckiepond_hrvo.launch  duckiepond_new.launch
catkin_ws/src/duckiepond_gazebo/models/apriltag/: apriltag.xacro
catkin_ws/src/duckiepond_gazebo/models/bamboo/: model.config  model.sdf  model.sdf~
catkin_ws/src/duckiepond_gazebo/models/bamboo/meshes/: bamboo.dae
catkin_ws/src/duckiepond_gazebo/models/bamboo_lake/: model.config  model.sdf
catkin_ws/src/duckiepond_gazebo/models/bamboo_water/: model.config  model.sdf
catkin_ws/src/duckiepond_gazebo/models/bamboo_with_wall/: model.config  model.sdf
catkin_ws/src/duckiepond_gazebo/models/bamboo_with_wall/meshes/: bamboo.dae
catkin_ws/src/duckiepond_gazebo/models/docking/: model.config  model.sdf
catkin_ws/src/duckiepond_gazebo/models/nctu_road/: model.config  model.sdf
catkin_ws/src/duckiepond_gazebo/models/nctu_road/meshes/: con.dae
catkin_ws/src/duckiepond_gazebo/models/ocean/: model.sdf
catkin_ws/src/duckiepond_gazebo/models/road_to_water/: model.config  model.sdf
catkin_ws/src/duckiepond_gazebo/models/road_to_water/meshes/: con.dae
catkin_ws/src/duckiepond_gazebo/models/sanbox_terrain_road/: model.config  model.sdf
catkin_ws/src/duckiepond_gazebo/models/sanbox_terrain_road/me/: terrain.dae
catkin_ws/src/duckiepond_gazebo/src/: usv_gazebo_thrust_plugin.cc
catkin_ws/src/duckiepond_gazebo/worlds/: bamboo.world  duckiepond.world
catkin_ws/src/duckiepond_vehicle/: CMakeLists.txt  package.xml
catkin_ws/src/duckiepond_vehicle/include/: usv_gazebo_thrust_plugin.hh
catkin_ws/src/duckiepond_vehicle/launch/: display.launch  gazebo.launch
catkin_ws/src/duckiepond_vehicle/src/: usv_gazebo_thrust_plugin.cc
catkin_ws/src/duckiepond_vehicle/urdf/: apriltag.xacro  apriltag_base.xacro  duckieboat.xacro  duckieboat_base_new.xacro  duckieboat_new.urdf  duckieboat_new.xacro  usv_gazebo_apriltags_plugin.xacro  usv_gazebo_camera_plugin.xacro  usv_gazebo_dynamics_plugin.xacro  usv_gazebo_gps_plugin.xacro  usv_gazebo_imu_plugin.xacro  usv_gazebo_p3d_plugin.xacro  usv_gazebo_thrust_plugin.xacro  watchtower.xacro
