<?xml version="1.0"?>
<package format="2">
  <name>duckiepond_gazebo</name>
  <version>0.0.0</version>
  <description>The duckiepond_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tonycar12002@gmail.com">tony</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>duckiepond_vehicle</depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- This tells gazebo to look in the catkin_package path for resources
    Particularly important for the models/pondmap.png file for the lake.world-->
    <gazebo_ros gazebo_model_path="${prefix}:${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/media/materials/scripts:${prefix}/media/materials/textures"/>
  </export>
</package>
